feat(ticket): add endpoint for partial status update
Implement the business logic to update a ticket's status.
- Added UpdateTicketStatusRequest DTO.
- Added updateTicketStatus service method.
- Implemented PATCH /api/v1/tickets/{id}/status endpoint to allow
  partial updates, adhering to RESTful API best practices.