@@ -4,6 +4,7 @@ import com.example.demo.tickets.aspect.LogExecutionTime;
 import com.example.demo.tickets.dto.request.CreateTicketRequest;
 import com.example.demo.tickets.dto.response.TicketResponse;
 import com.example.demo.tickets.entity.Ticket;
+import com.example.demo.tickets.entity.enums.TicketStatus;
 import com.example.demo.tickets.exception.TicketNotFoundException;
 import com.example.demo.tickets.mapper.TicketMapper;
 import com.example.demo.tickets.repository.TicketRepository;
@@ -14,7 +15,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -30,6 +30,7 @@ public class TicketServiceImpl implements TicketService {
         Ticket ticket = Ticket.builder()
                 .title(request.title())
                 .description(request.description())
+                .status(TicketStatus.OPEN)
                 .build();
 
         Ticket savedTicket = ticketRepository.save(ticket);
@@ -42,7 +43,7 @@ public class TicketServiceImpl implements TicketService {
     public List<TicketResponse> getAllTickets() {
         return ticketRepository.findAll().stream()
                 .map(ticketMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -52,5 +53,17 @@ public class TicketServiceImpl implements TicketService {
         Ticket ticket = ticketRepository.findById(id)
                 .orElseThrow(() -> new TicketNotFoundException(id));
         return ticketMapper.toResponse(ticket);
+    }
+
+    @Override
+    @LogExecutionTime
+    @Transactional
+    public TicketResponse updateTicketStatus(UUID id, TicketStatus newStatus) {
+        Ticket ticket = ticketRepository.findById(id)
+                .orElseThrow(() -> new TicketNotFoundException(id));
+
+        ticket.setStatus(newStatus);
+
+        return ticketMapper.toResponse(ticketRepository.save(ticket));
     }
 }
